save change manually, exclude video

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ alTmp*
 *.spl
 parts/figs/ac/
 parts/figs/actin-cloud.mov
+Defense/Cell2gauche_TRANS_SIFT_C57BL6.avi
+Defense/CellFM.avi
+Defense/CellMyo.avi
+Defense/presentation-new.key/Data/Cell2gauche_TRANS_SIFT_C57BL6-1266.avi
+Defense/presentation-new.key/Data/CellFM-1275.avi
+Defense/presentation-new.key/Data/CellMyo-1283.avi
+Defense/presentation-new.key/Data/Tread-1638.mov
+.DS_Store
